# C-extension

./: CMakeLists.txt  bar_data.h  build_all.bat  example.cpp  setup.py  spammodule.c  test.cpp
